--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0-beta.1",
     "vue-i18n": "^9.0.0-beta.0"
@@ -22,7 +23,10 @@
     "@typescript-eslint/parser": "^4.9.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.0.0"
   },
   "browserslist": [
